--- a/src/app/admin/content/a-news/a-posters/a-posters.component.html
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.html
@@ -51,7 +51,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col text-center">
-          <img src="http://localhost:5000/{{selectedPoster.posterPhotoUrl}}" class="img-fluid" alt="">
+          <img src="{{rootUrl}}{{selectedPoster.posterPhotoUrl}}" class="img-fluid" alt="">
         </div>
       </div>
     </div>
