--- a/src/app/admin/content/a-news/a-posters/a-posters.component.html
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.html
@@ -15,7 +15,8 @@
               <input type="date" formControlName="happensAt" class="form-control">
               <br>
               <p>Plik</p>
-              <input #file type="file" formControlName="image" class="form-control-file" multiple (change)="upload(file.files)">
+              <input #file type="file" formControlName="image" class="form-control-file" multiple (change)="upload(file.files)"
+                accept="image/jpeg">
               <br>
               <p>Widoczność:</p>
               <input type="checkbox" formControlName="visible" class="form-control">
