Visibility as select input.

--- a/src/app/admin/content/a-news/a-posters/a-posters.component.html
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.html
@@ -19,7 +19,11 @@
                 accept="image/jpeg">
               <br>
               <p>Widoczność:</p>
-              <input type="checkbox" formControlName="visible" class="form-control">
+              <!-- <input type="checkbox" formControlName="visible" class="form-control"> -->
+              <select class="form-control" formControlName="visible">
+                <option>Ukryty</option>
+                <option>Widoczny</option>
+                </select>
               <br>
             </form>
           </div>
