--- a/src/app/admin/content/a-news/a-posters/a-posters.component.html
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.html
@@ -15,15 +15,14 @@
               <input type="date" formControlName="happensAt" class="form-control">
               <br>
               <p>Plik</p>
-              <input #file type="file" formControlName="image" class="form-control-file" multiple (change)="upload(file.files)"
+              <input #file type="file" formControlName="image" class="form-control-file" multiple (change)="onSelectFile($event)"
                 accept="image/jpeg">
               <br>
               <p>Widoczność:</p>
-              <!-- <input type="checkbox" formControlName="visible" class="form-control"> -->
               <select class="form-control" formControlName="visible">
                 <option>Ukryty</option>
                 <option>Widoczny</option>
-                </select>
+              </select>
               <br>
             </form>
           </div>
