--- a/src/app/admin/content/a-news/a-posters/a-posters.component.html
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.html
@@ -27,10 +27,10 @@
             </form>
           </div>
           <div class="col-12 col-sm-6 text-center">
-            <img [src]="previewUrl" height="400">
+            <img [src]="previewUrl" class="prev">
           </div>
           <div class="col-12">
-            <button type="submit" class="btn btn-primary mt-2 mt-sm-3 pull-right" (click)="this.onSubmit()" [disabled]="posterForm.invalid || posterForm.pristine">
+            <button type="submit" class="btn btn-primary mt-2 mt-sm-3 pull-left" (click)="this.onSubmit()" [disabled]="posterForm.invalid || posterForm.pristine">
               Dodaj nowy plakat
             </button>
           </div>
