Login input autofocus.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
       <label class="mt-2 mt-sm-3">
         Login:
         <br>
-        <input type="text" formControlName="username" class="form-control">
+        <input type="text" formControlName="username" class="form-control" autofocus>
       </label>
       <br>
       <label>
