--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,7 +17,7 @@
         <a class="nav-link" id="nav-dropdown-2" ngbDropdownToggle>
           ZAINSPIRUJ!
         </a>
-        <div ngbDropdownMenu class="mt-2">
+        <div ngbDropdownMenu class="mt-2 text-center">
           <a class="dropdown-item" [routerLink]="['/goscie']">Odwiedzili nas</a>
           <a class="dropdown-item" [routerLink]="['/skirtchat']">#skirtchat</a>
         </div>
