--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-light bg-white" *ngIf="!isAuth">
-  <button type="button" class="btn btn-primary navbar-toggler mx-auto" (click)="isCollapsed = !isCollapsed">
-      <i class="fa fa-bars"></i>
-  </button>
+  <img src="{{nav}}" class="navbar-toggler mx-auto" (click)="isCollapsed = !isCollapsed">
   <div class="collapse navbar-collapse" [ngClass]="isCollapsed ? 'd-block' : 'd-none'">
     <ul class="navbar-nav mx-auto text-center">
       <li class="nav-item mx-1">
