Slight header changes.

--- a/src/app/admin/content/a-news/a-news.component.html
+++ b/src/app/admin/content/a-news/a-news.component.html
@@ -1,8 +1,8 @@
 <nb-tabset>
-  <nb-tab tabTitle="Posty">
+  <nb-tab tabTitle="Myśli">
     <div class="mt-3">
       <p>
-        Tu będzie lista postów
+        Tu będzie lista myśli
       </p>
     </div>
   </nb-tab>
