--- a/src/app/admin/content/a-news/a-news.component.html
+++ b/src/app/admin/content/a-news/a-news.component.html
@@ -1,9 +1,7 @@
 <nb-tabset>
   <nb-tab tabTitle="Myśli">
     <div class="mt-3">
-      <p>
-        Tu będzie lista myśli
-      </p>
+      <app-a-thoughts></app-a-thoughts>
     </div>
   </nb-tab>
   <nb-tab tabTitle="Wydarzenia">
