--- a/src/app/admin/content/a-news/a-thoughts/a-thoughts.component.html
+++ b/src/app/admin/content/a-news/a-thoughts/a-thoughts.component.html
@@ -12,7 +12,7 @@
               <input type="text" formControlName="description" placeholder="(od 3 do 200 znaków)" class="form-control">
               <br>
               <p>Plik</p>
-              <input type="file" formControlName="image" class="form-control-file" (change)="onSelectFile($event)"
+              <input type="file" formControlName="image" class="form-control-file" (change)="onSelectThoughtFile($event)"
                 accept="image/jpeg">
               <br>
               <p>Widoczność:</p>
