--- a/src/app/admin/content/a-news/a-posters/a-posters.component.html
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.html
@@ -77,38 +77,54 @@
     <nb-card-body>
       <div class="container">
         <div class="row">
-          <div class="col-12 col-sm-6">
+          <div class="col">
             <form [formGroup]="createPosterForm" class="mx-auto d-block">
-              <p class="mt-2 mt-sm-3">Opis:</p>
-              <input type="text" formControlName="description" placeholder="(od 3 do 200 znaków)" class="form-control">
-              <br>
-              <p>Data wydarzenia:</p>
-              <input type="date" formControlName="happensAt" class="form-control">
-              <br>
-              <p>Plik</p>
-              <input type="file" formControlName="image" class="form-control-file" (change)="onSelectPosterFile($event)"
-                accept="image/jpeg">
-              <br>
-              <p>Widoczność:</p>
-              <select class="form-control" formControlName="visible">
-                <option>Ukryty</option>
-                <option>Widoczny</option>
-              </select>
-              <br>
+              <div class="row">
+                <div class="col-12 col-sm-6">
+                  <p>Opis:</p>
+                  <input type="text" formControlName="description" placeholder="(od 3 do 200 znaków)" class="form-control">
+                  <br>
+                  <p>Data wydarzenia:</p>
+                  <input type="date" formControlName="happensAt" class="form-control">
+                  <br>
+                </div>
+                <div class="col-12 col-sm-6">
+                  <p>Widoczność:</p>
+                  <select class="form-control" formControlName="visible">
+                    <option>Ukryty</option>
+                    <option>Widoczny</option>
+                  </select>
+                  <br>
+                  <p>Plik</p>
+                  <input type="file" formControlName="image" class="form-control-file" (change)="onSelectPosterFile($event)"
+                    accept="image/jpeg" [ngStyle]="{'height': '38px'}">
+                </div>
+              </div>
             </form>
-          </div>
-          <div class="col-12 col-sm-6 text-center">
-            <img [src]="previewPosterUrl" class="prev">
-          </div>
-          <div class="col-12">
-            <button type="submit" class="btn btn-primary mt-2 mt-sm-3 pull-left" (click)="this.onPosterCreateSubmit()" [disabled]="createPosterForm.invalid || createPosterForm.pristine">
-              Dodaj nowy plakat
-            </button>
           </div>
         </div>
       </div>
     </nb-card-body>
   </nb-card>
+
+  <div class="mt-3" *ngIf="previewPosterToCreate">
+    <nb-card>
+      <nb-card-header>
+        Podgląd:
+      </nb-card-header>
+      <nb-card-body>
+        <div class="text-center">
+          <img [src]="previewPosterUrl" class="prev">
+        </div>
+        <div class="col-12">
+          <button type="submit" class="btn btn-success mt-2 mt-sm-3 pull-right" (click)="this.onPosterCreateSubmit()"
+            [disabled]="createPosterForm.invalid || createPosterForm.pristine">
+            Dodaj nowy plakat
+          </button>
+        </div>
+      </nb-card-body>
+    </nb-card>
+  </div>
 
   <nb-card>
     <nb-card-header>
