--- a/src/app/admin/content/a-news/a-posters/a-posters.component.html
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.html
@@ -131,6 +131,8 @@
       Plakaty w bazie danych:
     </nb-card-header>
     <nb-card-body>
+      <ng2-smart-table [settings]="settings" [source]="source" (custom)="onPreviewPosterModal($event)" (edit)="onEditPosterModal($event)"
+        (delete)="onDeletePosterModal($event)"></ng2-smart-table>
     </nb-card-body>
   </nb-card>
 </div>
