--- a/src/app/admin/content/a-news/a-posters/a-posters.component.html
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.html
@@ -1,52 +1,4 @@
-<!-- Templates -->
-
-<ng-template #editPosterModal let-modal>
-  <div class="modal-body">
-    <div class="container">
-      <div class="row">
-        <div class="col-12 text-center">
-          <form [formGroup]="editPosterForm" class="mx-auto d-block">
-            <p class="mt-2 mt-sm-3">Opis:</p>
-            <input type="text" formControlName="description" placeholder="(od 3 do 200 znaków)" class="form-control">
-            <br>
-            <p>Data wydarzenia:</p>
-            <input type="date" formControlName="happensAt" class="form-control" value="{{this.selectedPoster.happensAt | date : 'yyyy-MM-dd'}}">
-            <br>
-            <p>Widoczność:</p>
-            <select class="form-control" formControlName="visible">
-              <option>Ukryty</option>
-              <option>Widoczny</option>
-            </select>
-            <br>
-            <p>Zmień obraz</p>
-            <input type="file" formControlName="image" class="form-control-file" (change)="onSelectEditPosterFile($event)"
-              accept="image/jpeg">
-            <br>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" (click)="modal.close()">Anuluj</button>
-    <button type="button" class="btn btn-primary" (click)="modal.close(); onPosterEditSubmit()" [disabled]="editPosterForm.invalid || editPosterForm.pristine">Aktualizuj</button>
-  </div>
-</ng-template>
-
-<ng-template #previewPosterModal let-modal>
-  <div class="modal-body">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col text-center">
-          <img src="{{rootUrl}}{{selectedPoster.posterPhotoUrl}}" class="img-fluid" alt="">
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" (click)="modal.close()">Zamknij</button>
-  </div>
-</ng-template>
+<!-- Modals -->
 
 <ng-template #deletePosterModal let-modal>
   <div class="modal-body">
@@ -95,7 +47,7 @@
                     <option>Widoczny</option>
                   </select>
                   <br>
-                  <p>Plik</p>
+                  <p>Plik:</p>
                   <input type="file" formControlName="image" class="form-control-file" (change)="onSelectPosterFile($event)"
                     accept="image/jpeg" [ngStyle]="{'height': '38px'}">
                 </div>
@@ -103,36 +55,74 @@
             </form>
           </div>
         </div>
+        <div class="col-12">
+          <div class="text-center">
+            <img [src]="previewCreatePosterUrl" class="my-2 my-sm-3 prev">
+          </div>
+          <div class="col-12">
+            <button type="submit" class="btn btn-success mt-2 mt-sm-3 pull-right" (click)="onPosterCreateSubmit()"
+              [disabled]="createPosterForm.invalid || createPosterForm.pristine">
+              Dodaj nowy plakat
+            </button>
+          </div>
+        </div>
       </div>
     </nb-card-body>
   </nb-card>
-
-  <div class="mt-3" *ngIf="previewPosterToCreate">
-    <nb-card>
-      <nb-card-header>
-        Podgląd:
-      </nb-card-header>
-      <nb-card-body>
-        <div class="text-center">
-          <img [src]="previewPosterUrl" class="prev">
-        </div>
-        <div class="col-12">
-          <button type="submit" class="btn btn-success mt-2 mt-sm-3 pull-right" (click)="this.onPosterCreateSubmit()"
-            [disabled]="createPosterForm.invalid || createPosterForm.pristine">
-            Dodaj nowy plakat
-          </button>
-        </div>
-      </nb-card-body>
-    </nb-card>
-  </div>
 
   <nb-card>
     <nb-card-header>
       Plakaty w bazie danych:
     </nb-card-header>
     <nb-card-body>
-      <ng2-smart-table [settings]="settings" [source]="source" (custom)="onPreviewPosterModal($event)" (edit)="onEditPosterModal($event)"
-        (delete)="onDeletePosterModal($event)"></ng2-smart-table>
+      <ng2-smart-table [settings]="settings" [source]="source" (edit)="onEditPoster($event)" (delete)="onDeletePosterModal($event)"></ng2-smart-table>
+    </nb-card-body>
+  </nb-card>
+
+  <nb-card *ngIf="showPosterDetails">
+    <nb-card-header>
+      Szczegóły plakatu "{{selectedPoster.description}}"
+    </nb-card-header>
+    <nb-card-body>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <form [formGroup]="editPosterForm" class="mx-auto d-block">
+              <div class="row">
+                <div class="col-12 col-sm-6">
+                  <p>Opis:</p>
+                  <input type="text" formControlName="description" placeholder="(od 3 do 200 znaków)" class="form-control">
+                  <br>
+                  <p>Data wydarzenia:</p>
+                  <input type="date" formControlName="happensAt" class="form-control" value="{{selectedPoster.happensAt | date : 'yyyy-MM-dd'}}">
+                  <br>
+                </div>
+                <div class="col-12 col-sm-6">
+                  <p>Widoczność:</p>
+                  <select class="form-control" formControlName="visible">
+                    <option>Ukryty</option>
+                    <option>Widoczny</option>
+                  </select>
+                  <br>
+                  <p>Zmień obraz:</p>
+                  <input type="file" formControlName="image" class="form-control-file" (change)="onSelectEditPosterFile($event)"
+                    accept="image/jpeg" [ngStyle]="{'height': '38px'}">
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="col-12">
+          <div class="text-center">
+            <img [src]="previewEditPosterUrl" class="my-2 my-sm-3 prev">
+          </div>
+          <button type="button" class="btn btn-success mx-2 pull-right" (click)="closePosterDetails(); onPosterEditSubmit()"
+            [disabled]="editPosterForm.invalid || editPosterForm.pristine">Aktualizuj</button>
+          <div class="col-12">
+            <button type="button" class="btn btn-secondary mx-2 pull-right" (click)="closePosterDetails()">Anuluj</button>
+          </div>
+        </div>
+      </div>
     </nb-card-body>
   </nb-card>
 </div>
