Same input height in a-posters.

--- a/src/app/admin/content/a-news/a-posters/a-posters.component.html
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.html
@@ -106,7 +106,7 @@
                   <br>
                   <p>Zmień obraz:</p>
                   <input type="file" formControlName="image" class="form-control-file" (change)="onSelectEditPosterFile($event)"
-                    accept="image/jpeg" [ngStyle]="{'height': '38px'}">
+                    accept="image/jpeg">
                 </div>
               </div>
             </form>
