--- a/src/app/admin/content/a-news/a-posters/a-posters.component.html
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.html
@@ -41,10 +41,10 @@
                   <br>
                 </div>
                 <div class="col-12 col-sm-6">
-                  <p>Widoczność:</p>
-                  <select class="form-control" formControlName="visible">
-                    <option>Ukryty</option>
-                    <option>Widoczny</option>
+                  <p>Akceptacja:</p>
+                  <select class="form-control" formControlName="accepted">
+                    <option>Oczekuje</option>
+                    <option>Przyjęto</option>
                   </select>
                   <br>
                   <p>Plik:</p>
@@ -98,10 +98,10 @@
                   <br>
                 </div>
                 <div class="col-12 col-sm-6">
-                  <p>Widoczność:</p>
-                  <select class="form-control" formControlName="visible">
-                    <option>Ukryty</option>
-                    <option>Widoczny</option>
+                  <p>Akceptacja:</p>
+                  <select class="form-control" formControlName="accepted">
+                    <option>Oczekuje</option>
+                    <option>Przyjęto</option>
                   </select>
                   <br>
                   <p>Zmień obraz:</p>
