--- a/src/app/admin/content/a-news/a-thoughts/a-thoughts.component.html
+++ b/src/app/admin/content/a-news/a-thoughts/a-thoughts.component.html
@@ -15,10 +15,10 @@
               <input type="file" formControlName="image" class="form-control-file" (change)="onSelectThoughtFile($event)"
                 accept="image/jpeg">
               <br>
-              <p>Widoczność:</p>
-              <select class="form-control" formControlName="visible">
-                <option>Ukryty</option>
-                <option>Widoczny</option>
+              <p>Akceptacja:</p>
+              <select class="form-control" formControlName="accepted">
+                <option>Oczekuje</option>
+                <option>Przyjęto</option>
               </select>
               <br>
             </form>
