--- a/src/app/admin/content/a-news/a-posters/a-posters.component.html
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.html
@@ -125,4 +125,14 @@
       </div>
     </nb-card-body>
   </nb-card>
+
+  <nb-card>
+    <nb-card-header>
+      Plakaty na stronie:
+    </nb-card-header>
+    <nb-card-body>
+      <app-shared-news-posters></app-shared-news-posters>
+    </nb-card-body>
+  </nb-card>
+
 </div>
