Thoughts carousel as shared component.

--- a/src/modules/app/news/news.component.html
+++ b/src/modules/app/news/news.component.html
@@ -1,2 +1,2 @@
-<app-news-carousel></app-news-carousel>
+<app-shared-news-thoughts></app-shared-news-thoughts>
 <app-shared-news-posters></app-shared-news-posters>
